# xi-editor

./: README.md
rust/: Cargo.toml
rust/core-lib/: Cargo.toml
rust/core-lib/benches/: wrap.rs
rust/core-lib/src/: annotations.rs  config.rs  edit_ops.rs  editor.rs  event_context.rs  find.rs  lib.rs  line_cache_shadow.rs  movement.rs  recorder.rs  rpc.rs  styles.rs  view.rs  watcher.rs
rust/core-lib/src/plugins/: catalog.rs  manifest.rs
rust/core-lib/tests/: rpc.rs
rust/experimental/lang/: Cargo.toml
rust/experimental/lang/benches/: peg_tests.rs
rust/lsp-lib/: Cargo.toml
rust/lsp-lib/src/: conversion_utils.rs  language_server_client.rs  lib.rs  lsp_plugin.rs  utils.rs
rust/plugin-lib/src/: base_cache.rs
rust/rope/: Cargo.toml
rust/rope/benches/: cursors.rs  diff.rs  edit.rs
rust/rope/src/: delta.rs  find.rs  multiset.rs  tree.rs
rust/rpc/: Cargo.toml
rust/rpc/src/: error.rs  parse.rs
rust/sample-plugin/: Cargo.toml
rust/syntect-plugin/: Cargo.toml
rust/syntect-plugin/src/: main.rs  stackmap.rs
rust/trace/: Cargo.toml
rust/trace/src/: lib.rs  sys_pid.rs  sys_tid.rs
rust/unicode/: Cargo.toml
rust/unicode/benches/: bench.rs
