[package]
name = "xi-core"
version = "0.4.0"
license = "Apache-2.0"
authors = ["Raph Levien <raph@google.com>"]
description = "Main process for xi-core, based on json-rpc"
categories = ["text-editors"]
repository = "https://github.com/xi-editor/xi-editor"
edition = '2018'
rust-version = "1.65"

[dependencies]
serde = "1.0.147"
serde_json = "1.0.87"
chrono = "0.4.23"
fern = "0.6.1"
log = "0.4.17"
dirs = "2.0" # TODO upgrade to major version

[dependencies.xi-core-lib]
path = "core-lib"

[dependencies.xi-rpc]
path = "rpc"

[workspace]
members = [
  "core-lib",
  "experimental/lang",
  "lsp-lib",
  "plugin-lib",
  "rope",
  "rpc",
  "sample-plugin",
  "syntect-plugin",
  "trace",
  "unicode",
]
