[package]
name = "xi-lsp-lib"
version = "0.1.0"
license = "Apache-2.0"
repository = "https://github.com/google/xi-editor"
description = "The base library for implementing LSP Plugins for Xi"
authors = ["betterclever <paliwal.pranjal83@gmail.com>"]
edition = '2018'

[dependencies]
lsp-types = "0.93.2"
serde = "1.0.147"
serde_json = "1.0.87"
serde_derive = "1.0.147"
jsonrpc-lite = "0.6.0"
url = "1.7.0" # Update to new major version
fern = "0.6.1"
log = "0.4.17"
chrono = "0.4.23"

[dependencies.xi-plugin-lib]
path = "../plugin-lib"

[dependencies.xi-core-lib]
path = "../core-lib"

[dependencies.xi-rope]
path = "../rope"

[dependencies.xi-rpc]
path = "../rpc"

[dependencies.xi-trace]
path = "../trace"
