[package]
authors = ["Raph Levien <raph@google.com>"]
description = "A generic rope data structure built on top of B-Trees."
license = "Apache-2.0"
name = "xi-rope"
repository = "https://github.com/google/xi-editor"
version = "0.3.0"
edition = '2018'

[dependencies]
bytecount = "0.6.3"
memchr = "2.5.0"
serde = { version="1.0.147", optional=true, features=["derive"] }
unicode-segmentation = "1.10.0"
regex = "1.7.0"

[dev-dependencies]
criterion = "0.4.0"
serde_test = "1.0.147"
serde_json = "1.0.87"

[features]
default = []

[[bench]]
name = "cursors"
harness = false

[[bench]]
name = "diff"
harness = false

[[bench]]
name = "edit"
harness = false
