[package]
name = "xi-trace"
version = "0.2.0"
license = "Apache-2.0"
authors = ["Vitali Lovich <vlovich@google.com>"]
categories = ["development-tools::profiling"]
repository = "https://github.com/google/xi-editor"
description = "Library-based distributed tracing API to meet the needs of xi-core, frontends and plugins"
edition = '2018'

[features]
benchmarks = []
default = ["chrome_trace_event"]
json_payload = ["serde_json"]
getpid = []
chrome_trace_event = ["serde_json"]
ipc = ["bincode"]

[dependencies]
time = "0.1" # TODO upgrade to major version
lazy_static = "1.4.0"
serde_json = { version = "1.0.87", optional = true }
serde_derive = "1.0.147"
serde = "1.0.147"
libc = "0.2.137"
log = "0.4.17"
bincode = { version = "1.3.3", optional = true }
