[package]
name = "xi-lang"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Raph Levien <raph@google.com>"]
repository = "https://github.com/google/xi-editor"
description = "A language syntax coloring and indentation plugin for xi-editor."
edition = '2018'

[dependencies]
pom = { version = "3.2.0", optional = true }
regex = { version = "1.6.0", optional = true }
nom = { version = "4.2", optional = true } # TODO upgrade to major version
combine = { version = "3.8", optional = true } # TODO upgrade to major version

[dependencies.xi-plugin-lib]
path = "../../plugin-lib"

[dependencies.xi-core-lib]
path = "../../core-lib"

[dependencies.xi-rope]
path = "../../rope"

[dependencies.xi-trace]
path = "../../trace"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "peg_tests"
harness = false
